crates/math-core/tests/snapshots/error_test__super_then_prime.snap
---
source: crates/math-core/tests/error_test.rs
expression: "f^2'"
---
Error: Duplicate subscript or superscript.
   ╭─[ <input>:1:4 ]
   │
 1 │ f^2'
   │    ┬  
   │    ╰── duplicate
───╯
